--- a/SongStructureGUI.html
+++ b/SongStructureGUI.html
@@ -30,51 +30,41 @@ body {
 
 
 
-<table border = "1">
-<tr><td colspan = "4">
 <table>
 <tr>
-<td><button type = "button" onclick = "playAudioButton()">Play</button></td>
-<td><button type = "button" onclick = "pauseAudio()">Pause</button></td>
-<td colspan = "2"><h3><p id = "songname"></p></h3></td>
+    <td><audio id="audio_main" controls></audio></td>
 </tr>
-<tr><td colspan = "2"><h3><p id="time"></p></h3></td></tr>
-</table>
-</td></tr>
+
 <tr>
-<td colspan = "2">
-<canvas id="SimilarityCanvas" width="800" height="700">
-</td>
+    <td><h3><p id = "songname"></p></h3></td>
 </tr>
+
 <tr>
-<td colspan = "2">
-<canvas id="EigCanvas" width="800" height="100">
-</td>
+    <td>
+        <canvas id="SimilarityCanvas" width="800" height="700">
+    </td>
 </tr>
-<tr><td colspan = "4">
+
+<tr>
+    <td>
+        <canvas id="EigCanvas" width="800" height="100">
+    </td>
+</tr>
+
+<tr><td></td>
     <h3><p id = "pagestatus"><font color = "yellow">Waiting for user input...</font></p></h3>
 </td></tr>
 </table>
 
 <script>
-    var source = null;
-    var analyser = null;
-    var context = new (window.AudioContext || window.webkitAudioContext)();
-    var buffer = null;
+    //https://www.w3schools.com/tags/ref_av_dom.asp
+    var audio = document.getElementById("audio_main");
     var waitingDisp = document.getElementById("pagestatus");
     var playing = false;
-    var songname = "";
     var songnameTxt = document.getElementById("songname");
-    var timeTxt = document.getElementById("time");
     var ssmcanvas = document.getElementById('SimilarityCanvas');
     var eigcanvas = document.getElementById('EigCanvas');
     var dimsUpdated = false;
-
-    function disconnect() {
-        source.stop();
-        source.disconnect(0);
-        analyser.disconnect(0);
-    }
 
     ssmctx = ssmcanvas.getContext('2d');
     eigctx = eigcanvas.getContext('2d');
@@ -87,78 +77,28 @@ body {
 		reader.onload = function(e) {
             var Results = JSON.parse(reader.result);
             //Setup audio buffers
-            var arrayBuff = base64ToArrayBuffer(Results.audiofile);
-            decodeAudio(arrayBuff, 1);
+            audio.src = Results.audio;
             times = Results.times;
-            songname = Results.songname;
-            CSImage.src = "data:image/png;base64, " + Results.W;
+            songnameTxt.innerHTML = Results.songname;
+            CSImage.src = Results.W;
             if ('v' in Results) {
-                EigImage.src = "data:image/png;base64, " + Results.v;
+                EigImage.src = Results.v;
             }
             dimsUpdated = 0;
+            offsetidx = 0;
             requestAnimationFrame(updateSSMCanvas);
-
-
             changeToReady();
 		}
 		reader.readAsText(file);
-	});
-
-
-    function playAudioButton() {
-        if (!playing) {
-            //Prevent the user from accidentally playing multiple audio streams
-            playAudio();
-        }
-    }
-
-    function pauseAudio() {
-        console.log("Pausing");
-        if (source === null) {
-            return;
-        }
-        playing = false;
-        source.stop();
-    }
-
-    function playAudio() {
-        if (context === null) {
-            return;
-        }
-        playing = true;
-        source = context.createBufferSource();
-        source.buffer = buffer;
-        playing1 = true;
-        offsetTime = times[offsetidx];
-        songnameTxt.innerHTML = songname;
-        console.log("Playing audio, offsetTime = " + offsetTime);
-        analyser = context.createAnalyser();
-        source.connect(analyser);
-        analyser.connect(context.destination);
-
-        startTime = context.currentTime;
-
-        //setTimeout(disconnect, source.buffer.duration * 1000 +1000);
-        source.start(context.currentTime, offsetTime, source.buffer.duration - offsetTime);
-
-        playIdx = 0;
-        playIdxSSM = 0;
-        //requestAnimFrame(function(){repaintWithContext(context)});
+    });
+    
+    coldStartAudio = function() {
+        offsetidx = 0;
         requestAnimationFrame(updateSSMCanvas);
     }
-
-    function decodeAudio(arrayBuff) {
-        if(context.decodeAudioData) {
-            context.decodeAudioData(arrayBuff, function(buff) {
-                buffer = buff;
-            }, function(e) {
-                console.log(e);
-            });
-        }
-        else {
-            buffer = context.createBuffer(1, 22050, 44100);
-        }
-    }
+    audio.addEventListener("play", coldStartAudio);
+    audio.addEventListener("pause", coldStartAudio);
+    audio.addEventListener("seek", coldStartAudio);
 </script>
 
 
