--- a/SongStructureGUI.html
+++ b/SongStructureGUI.html
@@ -75,8 +75,8 @@
             var params = JSON.parse(reader.result);
             //Setup audio buffers
             audio_obj.audio_widget.src = params.audio;
-            audio_obj.times = params.times;
-            audio_obj.offsetidx = 0;
+            audio_obj.time_interval = params.time_interval;
+            audio_obj.dim = params.dim;
             songnameTxt.innerHTML = params.songname;
             stcanvas.updateParams(params);
             
@@ -85,13 +85,11 @@
 		reader.readAsText(file);
     });
     
-    coldStartAudio = function() {
-        audio_obj.offsetidx = 0;
+    refreshDisplays = function() {
         requestAnimationFrame(stcanvas.repaint.bind(stcanvas));
     }
-    audio_obj.audio_widget.addEventListener("play", coldStartAudio);
-    audio_obj.audio_widget.addEventListener("pause", coldStartAudio);
-    audio_obj.audio_widget.addEventListener("seek", coldStartAudio);
+    audio_obj.audio_widget.addEventListener("play", refreshDisplays);
+    audio_obj.audio_widget.addEventListener("pause", refreshDisplays);
 </script>
 
 
