Fixing a couple more small bugs

--- a/SongStructureGUI.html
+++ b/SongStructureGUI.html
@@ -58,7 +58,7 @@
 <script>
     //https://www.w3schools.com/tags/ref_av_dom.asp
     var audio_obj = {'audio_widget':document.getElementById("audio_widget"), 
-                                'times':[], 'offsetidx':0};
+                                'time_interval':0, 'dim':0};
     audio_obj.audio_widget.style.width = 800;
     var waitingDisp = document.getElementById("pagestatus");
     var playing = false;
